Fix: z-index on NavBar

--- a/src/styles/components/NavBar.scss
+++ b/src/styles/components/NavBar.scss
@@ -3,7 +3,7 @@
 
 .NavBar {
     position: fixed;
-
+    z-index: 100;
     display: flex;
     align-items: center;
 
